# localite

./: .gitignore  pyproject.toml  swe_runner.py
docs/: ARCHITECTURE_LOCAL_CODE_AGENT.md  EVALUATION_FRAMEWORK.md  localite_harness_gaps.md  old_arch_doc.md
localite/: __init__.py  code_index.py  config.py  main.py
plans/: agent_architecture_analysis.md  agent_eval_plan.md  ctags_guidance_plan.md  design_plan.md  glm_5_2_eval.md  harness_optimization_plan.md  localite_v1_implementation.md  mini_swe_integration_plan.md  needle_integration_plan.md  plan.md  profile_driven_format_plan.md  prompt_redesign_plan.md  restructure_architecture_doc.md  slm_harness_improvements.md  swebench_plan.md  week1_core_agent_loop.md
profiles/: deepseek_v4_flash.toml  deepseek_v4_flash_v10.toml  deepseek_v4_flash_v6.toml  deepseek_v4_flash_v8.toml  deepseek_v4_flash_v9.toml  gemma4_e4b.toml  gemma4_e4b_gpu.toml  gemma4_needle.toml  gemma4_needle_gpu.toml  glm_5_2.toml  lfm25.toml  qwen35_4b_gpu.toml  qwen35_4b_gpu_v6.toml
results/: common_ground_failures.md  memory_retrieval_comparative_analysis.md  multi_model_comparison_report.md  quick_scan_results.json  quick_scan_summary.md
scripts/: render_system_prompt.py
src/: agent_eval_harness.py  agent_test_tasks.py  eval_harness.py  generate_comparison_report.py  merge_e2b_results.py  merge_lfm25_results.py  run_agent_suite.py  run_full_suite.py  run_quick_scan.py  test_scenarios.py  write_common_ground_report.py
tests/: test_agent_loop.py  test_e2e_realtime.py  test_task_complete_feature.py  test_tool_call_parsing.py
(+278 files in other folders)
